# serust

./: .gitignore  .uncommentrc.toml  Cargo.toml  LICENSE  README.md  check_errors.txt  development.db  docker-compose.yml  global_settings.json  schema.md  shares.json  users.json
.github/workflows/: build.yml  linux-build.yml
admin-ui/: .gitignore  index.html  package.json  tailwind.config.js
admin-ui/src/: App.tsx  index.css
admin-ui/src-tauri/: Cargo.toml  tauri.conf.json
lib/: main.dart  pubspec.yaml
lib/core/: api_client.dart  init.dart  injection.dart  result.dart
lib/l10n/: app_en.arb  app_fr.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_fr.dart
old_src/: main.rs
old_src/application/: auth_service.rs  file_service.rs  mod.rs
old_src/domain/: error.rs  permission.rs  user.rs
old_src/framework/: app.rs  handler.rs  metrics.rs  mod.rs
old_src/handlers/: auth.rs  dir.rs  info.rs  mod.rs  transfer.rs
old_src/infrastructure/: file_repository.rs  mod.rs  tcp_server.rs  user_repository.rs
old_src/interface/: connection_handler.rs  mod.rs
old_src/middlewares/: logging_middleware.rs  mod.rs
server/: .env  Cargo.toml
server/src/: Cargo.toml  injection.rs  lib.rs  main.rs
src/: injection.rs  main.rs
src/application/: auth_service.rs  file_service.rs  share_service.rs
src/common/: error.rs  permission.rs
src/database/: access_log_repository.rs  analytics_repository.rs  domain.rs  file_repository.rs  file_usecases.rs  interfaces.rs  mod.rs  models.rs  schema.sql  service.rs  share_repository.rs  share_usecases.rs  user_repository.rs  user_usecases.rs
src/domain/: access_log.rs  error.rs  mod.rs  permission.rs  share.rs
src/file/: delete_usecases.rs  dir_exists_usecase.rs  domain.rs  download_usecase.rs  git_service.rs  interfaces.rs  list_usecases.rs  local_repository.rs  mkdir_usecases.rs  mod.rs  purge_usecase.rs  remove_dir_usecase.rs  rename_usecase.rs  restore_usecase.rs  s3_repository.rs  service.rs  stat_usecases.rs  upload_usecase.rs
src/framework/: app.rs  context.rs  handler.rs  metrics.rs  middleware.rs  mod.rs  router.rs
src/handlers/: auth.rs  dir.rs  info.rs  network.rs  share.rs  transfer.rs
src/infrastructure/: file_repository.rs  mod.rs  share_repository.rs  tcp_server.rs
src/interface/: connection_handler.rs  protocol_handler.rs
src/mcp/: mod.rs  registry.rs  server.rs  types.rs
src/middlewares/: auth_middleware.rs  logging_middleware.rs  middleware.rs  rate_limit_middleware.rs
src/protocol/: parser.rs
src/server/: mod.rs  tcp_server.rs
(+190 files in other folders)
