[package]
name = "tcp_file_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
socket2  = { version = "0.5", features = ["all"] }
dashmap  = "6"
async-trait = "0.1.77"
hyper = { version = "1.9.0", features = ["server"] }
hyper-util = { version = "0.1.20", features = ["full"] }
http-body-util = "0.1.3"
bytes = "1.11.1"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid", "time"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
flate2 = "1.0"
aes = "0.8"
cbc = "0.1"
block-padding = "0.3"
base64 = "0.22"
percent-encoding = "2.3.2"
git2 = "0.19"
zip = "2.2"
tar = "0.4"
unrar = "0.5"
aws-sdk-s3 = "1.132.0"
aws-config = "1.8.16"
tokio-util = { version = "0.7.18", features = ["io-util"] }
futures = "0.3.32"
